fix: make pokemon names visible again

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,32 +18,37 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
-  grid-auto-rows: minmax(300px, auto);
-  gap: 30px 30px;
+  grid-auto-rows: minmax(250px, auto);
+  gap: 15px 15px;
   padding: 10px;
   justify-items: center;
   align-items: center;
-  /*display: flex;
+  /* display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;*/
+  justify-content: space-around; */
 }
 
 .poke-button{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-items: center;
-  align-items: center;
+  align-items: center;*/
   border-top: 3px solid yellow;
-  border-bottom: 3px solid yellow;
+  border-bottom: 3px solid yellow; 
+  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: transparent;
   overflow-x: hidden;
   overflow-y: hidden;
-  padding: 10px;
+  
   background: #333;
   border-radius: 10px;
+  /* padding: 10px;
   width: 100%;
-  height: 100%;
+  height: 100%; */
   color: #eee;
   transition: 0.2s ease-in-out all;
 }
